Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
-          <h4>PARRELL WILLIAMS</h4>
+          <h4>PHARRELL WILLIAMS</h4>
           <h2>HAPPY</h2>
           <h4>| FROM DESPICABLE ME 2 |</h4>
         </div>
@@ -25,7 +25,7 @@
              HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND
               MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.
         </p>
-        <span>PHARRELWILLIAMS.COM</span>
+        <span>PHARRELLWILLIAMS.COM</span>
         <img src="images/columbia-logo.png">
         <span>COLUMBIARECORDS.COM</span>
         <br>
